# 3D_interview

./: Deliverables.md  ProblemStatement.md  README.md  docker-compose.yaml  run.bat  run.py
admin/: index.html  package-lock.json  package.json
admin/src/: App.css  App.tsx  index.css
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/api/: celery.py  settings.py  urls.py
backend/interviews/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/interviews/migrations/: 0001_initial.py
finetunning/: .gitignore  ai_utils.py  clean.py  pyproject.toml  run.py  test_ai.py  test_gen.py  train.py  worker.py
finetunning/llama_model_merged/: config.json  tokenizer_config.json
frontend/: Interviewer.tsx  index.html  package-lock.json  package.json
frontend/public/model/: interviewer.glb  interviewer_with_desk.glb  room.glb
frontend/src/: App.css  App.tsx  Dashboard.css
frontend/src/components/: Dashboard.tsx  ExcalidrawCanvas.tsx  Interviewer.tsx  InterviewerWithDesk.tsx
person detector/: .gitignore  README.md  detector.py  logger.py  main.py  requirements.txt
random_sht/: Untitled.blend  Untitled.glb  final_man.blend  final_man_final.blend  final_man_final.glb  room.blend  room.glb
websocket/: client.go  django_client.go  go.mod  hub.go  main.go  protocol.go  session.go
